--- a/k8-manifests/cats-serviceNodePort.yaml
+++ b/k8-manifests/cats-serviceNodePort.yaml
@@ -19,7 +19,7 @@ spec:
   type: NodePort
   ports:
   - port: 80
-    targetPort: 80
+    targetPort: 
     # Optional field
     # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
     nodePort: 30000
